--- a/hello.html
+++ b/hello.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello</title>
     <style>
-        h1{
+        h1,h2{
             font-size: 72px;
             text-align: center;
             color: aquamarine;
@@ -14,6 +14,6 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <h2>yess</h2>
+    <h2>This is my Website</h2>
 </body>
 </html>
